--- a/src/main/resources/application (example).properties
+++ b/src/main/resources/application (example).properties
@@ -14,3 +14,8 @@ spring.mvc.static-path-pattern=/**
 spring.web.resources.static-locations property=classpath:/static/
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework.web=DEBUG
+
+
+spring.kafka.producer.bootstrap-servers: 0.0.0.0:9092
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
